# campus-flash-sale

./: .gitignore  CMakeLists.txt  README.md
config/: config.example.json
docs/: acceptance-guide.md  architecture.md  dao-design.md  database-design.md  service-design.md  test-report.md  web-interface.md
include/app/: CliApp.h  WebApp.h
include/dao/: ActivityDao.h  InventoryLogDao.h  OrderDao.h  ProductDao.h  UserDao.h
include/db/: MySqlConnection.h  MySqlError.h  PreparedStatement.h  Transaction.h
include/http/: HttpRequest.h  HttpResponse.h  HttpServer.h
include/model/: Enums.h  FlashSaleActivity.h  InventoryLog.h  Order.h  Product.h  User.h
include/net/: Acceptor.h  Buffer.h  Channel.h  Epoll.h  EventLoop.h  InetAddress.h  Socket.h  TcpConnection.h  TcpServer.h
include/service/: ActivityService.h  AdminService.h  AuthService.h  FlashSaleService.h  OrderService.h  ProductService.h  ServiceError.h
include/utils/: Config.h  PasswordHasher.h
sql/: 01_create_database.sql  02_schema.sql  03_seed.sql  04_queries.sql  05_flash_sale_transaction.sql  reset.sql
src/: main.cpp
src/app/: CliApp.cpp  WebApp.cpp
src/dao/: ActivityDao.cpp  InventoryLogDao.cpp  OrderDao.cpp  ProductDao.cpp  UserDao.cpp
src/db/: MySqlConnection.cpp  MySqlError.cpp  PreparedStatement.cpp  Transaction.cpp
src/http/: HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
src/model/: Enums.cpp
src/net/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Epoll.cpp  EventLoop.cpp  InetAddress.cpp  Socket.cpp  TcpConnection.cpp  TcpServer.cpp
src/service/: ActivityService.cpp  AdminService.cpp  AuthService.cpp  FlashSaleService.cpp  OrderService.cpp  ProductService.cpp  ServiceError.cpp
src/utils/: Config.cpp  PasswordHasher.cpp
tests/: CMakeLists.txt  cli_smoke_test.cpp  config_test.cpp  dao_integration_test.cpp  flash_sale_concurrency_test.cpp  service_integration_test.cpp  transaction_test.cpp  web_assets_test.cpp
web/: app.js  index.html  styles.css
